# grepQt

./: .gitignore  CMakeLists.txt  FileSearcher.cpp  FileSearcher.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PCH.hpp  ReadMe.md  SearchResultModel.cpp  SearchResultModel.hpp  grepQt.cppcheck  grepQt.rc  uchardet.cmake
.github/workflows/: clang.yml  cppcheck.yml  gcc.yml
res/: grepQt.qrc
src/: CMakeLists.txt  CustomLineEdit.cpp  CustomLineEdit.hpp  CustomWidgets.cpp  CustomWidgets.hpp  EncodingDetector.cpp  EncodingDetector.hpp  ExpressionSelect.cpp  ExpressionSelect.hpp  ExpressionSelect.ui  FileReplacer.cpp  FileReplacer.hpp  FileSearcher.cpp  FileSearcher.hpp  LimitSelect.cpp  LimitSelect.ui  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MatchDetector.cpp  MatchDetector.hpp  Options.cpp  Options.hpp  PCH.hpp  ResultModel.cpp  ResultModel.hpp  SearchResultModel.cpp  SearchResultModel.hpp  TargetSelect.cpp  TargetSelect.hpp  TargetSelect.ui
src/core/: CMakeLists.txt  EncodingDetector.cpp  EncodingDetector.hpp  FileReplacer.cpp  FileSearcher.cpp  MatchDetector.cpp  MatchDetector.hpp  Options.cpp  Options.hpp  PCH.hpp
src/test/: CMakeLists.txt  Main.cpp  PCH.hpp  SearchTests.cpp  SearchTests.hpp  TestEncodingDetector.cpp  TestEncodingDetector.hpp  TestMatchDetector.cpp  TestMatchDetector.hpp  Tests.qrc
src/test/data/: ANSI.txt  UTF-16BE-BOM.txt  UTF-16BE.txt  UTF-16LE-BOM.txt  UTF-16LE.txt  UTF-8-BOM.txt  UTF-8.txt
src/ui/: CMakeLists.txt  CustomWidgets.cpp  ExpressionSelect.cpp  ExpressionSelect.hpp  ExpressionSelect.ui  LimitSelect.hpp  MainWindow.hpp  MainWindow.ui  PCH.hpp  ResultModel.hpp  TargetSelect.ui
